Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30416

QApplication::alert and QApplication::beep do nothing on Windows 7 x64

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.1.0 Beta 1
    • 5.0.1
    • GUI: Look'n'Feel
    • None
    • Windows 7 x64
    • da01deb0ac01b37656e021b9d5d696c5de7b0afb ,155ff13bb6340101f8dcc28b5c48105dca9403cb, f2fa65e4bfa09da6e857cd8c333eec5b1a87d318, qtbase: Revision macro, (5.1) 2f4cd18d3eec3bf90bf1a5bd471ef7a03550de97) QtQuick 2 (5.1.1) Docs: 65a0d19180b061fc24b2032289d157a

      QApplication::alert and QApplication::beep does nothing on my Windows 7 x64.

      These two functions are exist in document, however, only empty function in qtbase\src\widgets\kernel\qapplication_qpa.cpp.

      I don't know beep, but alert should call FlashWindowEx in Windows somewhat.

      I'm afraid these two functions also not working on other platforms.

        1. qtbug30416.tar
          10 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-30416
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            liuyanghejerry Jerry Liu
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes